--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1> MONTY SITE AHHHH <3 </h1>
-    <p> style="color:red;" I <br> wanna <br> see <br> if <br> this<br> works </p>
-    <h1> style="color:blue;" This work right? Should be blue</h1>
-    <img src="https://i.redd.it/wp4lyv8vwq771.jpg>
+    <p style="color:red;"> I <br> wanna <br> see <br> if <br> this<br> works </p>
+    <h1 style="color:blue;"> This work right? Should be blue</h1>
+    <img src="https://i.redd.it/wp4lyv8vwq771.jpg">
   </body>
 </html>
  
